src/app/styles/layout-base.scss
// Base Layout for all widths
// Disabling Buttons for swisstopo maps
.ol-control {
  visibility: hidden;
  display:none;
}


// basic content
body {
  @include fontNormal();
  z-index:10;
  background-color: $colorMenuTop;
  // Accessibility goes down the drain...
  button {
    outline:0 !important; // this might be an accessibility issue!
  }

}

// changed global foundation styles
.row {
  max-width:100%;
}
// stop changed global foundation styles



// Left slider
.wrapper-inner {
  overflow:hidden;
  height:100vh;
  position:relative;




  .position-left {
    padding-top:3em;
    position:absolute;
    display:none;
    height:100vh;
    width:75%;
    max-width: 680px;
    z-index:5;
    overflow-y:auto;
    @include castShadowRight;
    background-color: $colorMenuTop;
  }

  // Bottom slider
  .position-bottom {
    @include castShadowTop;
    width:100%;
    height:100vh;
    padding-top:0em;
    top:calc(100% - 40px);
    position:absolute;
    background-color: $colorMenuBgnd;
    z-index:4;
  }

}

#themeBottomSlider {
  z-index: 200;
}

// end left slider

// SVG-Icons
// Default behaviour
.button {
  @include button_svg();
}
.icon {
  @include icon_svg();
}
// End SVG-Icons

.header {
  height: 44px;
  z-index: 10;
  position: relative;



  // Sticky Container for the top bar
  .header-sticky-container {
    .header-sticky {
      width:100%;
      background-color: $colorMenuBgnd;
      @include castShadow();
    }
  }
  .menu-nav {
    position:absolute;
    top:2px;
    left:5px;
    .button {
      background-color:transparent;
      .icon-menu {
          fill:$colorContent;
      }

    }
  }
  .header-title {
    width:50%;
    position:absolute;
    top:0.5em;
    text-align: center;
    left:25%;
    right:25%;
    h2 {
      color:$colorHeadContent;
      @include fontNormal;
      font-size:$fontSizeBase * 1.4;

      &.hint {
        font-size: $fontSizeBase * 1;
        margin-top:-4px;
        padding:5px;
        background-color: $colorWarning;
        color:$colorWhite;
      }

    }
  }

  .mainlogo {
    color:$colorHeadContent;
    img {
      position:absolute;
      left:3em;
      top:0.5em;
      width:1.2em;
    }
    p {
      margin:0.5em 0em 0em 3.5em;
    }
    .oereb-title {
      font-size:$fontSizeBase * 1.4;
    }
  }

  // Logos im header
  .header-logo {
    position:absolute;
    right:5%;
    top:5px;

    // Logos in header
    .logo-bund, .logo-kanton, .logo-gemeinde {
      display:inline-block;
      width:35px;
      height:35px;
      background-size: contain;
      background-repeat: no-repeat;
      background-position: center center;
      background-color: $colorMenuBgnd;
      margin-right:10px;
      float:right;


    }
    .logo-bund {
      height:30px;
      width:30px;
    }

  }

}
/* ... */

